--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,12 +8,12 @@ edition = "2018"
 actix-web = "1.0"
 actix-cors = "0.1.0"
 
-listenfd = "0.3.3"
 serde_json = "1.0.41"
 serde = "1.0.41"
 dotenv = "0.14.1"
 mysql = "16.1.0"
 log = "0.4.0"
 env_logger = "0.7.0"
+failure = "0.1.6"
 
 chrono = "0.4.9"
